turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:13: error: value lenght is not a member of Array[Char]
	for (i<-0 to rule.lenght-1) {
                          ^LangtonsAnt:22: error: value lenght is not a member of Array[Char]
	if(pos!=rule.lenght-1) {setCouleurSol(colors(pos+1))}
                     ^